Added a bright-red background for all disabled checkboxes. Not exactly stylish but it'll have to do for now.
Normalize.css updated from version 2.1.1 to 2.1.2, jQuery now version 2.0.2

Next up, details for each individual item in the rightmost pane. I fear that the layout I'm currently making at 1600x900 is just right for what it is and any smaller will look bad. So, I'll also have to implement media queries for smaller resolutions. Right now only real breakpoint would be 1024x768. I'm not personally planning to port this to mobile at all.

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ label {
     margin-right: 5px;
 }
 
+.disabled {
+    background-color: red;
+    border-radius: 5px;
+}
+
 #items {
     width: 400px;
     height: 100%;
