--- a/css/main.css
+++ b/css/main.css
@@ -6,16 +6,6 @@
     overflow-y: scroll;
 }
 
-
-label {
-    margin-right: 5px;
-}
-
-.disabled {
-    background-color: red;
-    border-radius: 5px;
-}
-
 #items {
     width: 400px;
     height: 100%;
@@ -28,6 +18,23 @@ label {
     margin-right: 15px;
 }
 
+#details {
+    height: 100%;
+    position: fixed;
+    overflow-y: scroll;
+    margin-left: 690px;
+    margin-right: 15px;
+}
+
+label {
+    margin-right: 5px;
+}
+
+.disabled {
+    background-color: red;
+    border-radius: 5px;
+}
+
 figure {
     text-align: center;
     display: table;
@@ -37,6 +44,10 @@ figure {
     
     border: 2px inset transparent;
     border-radius: 5px;
+}
+
+.solo {
+    width: 100%;
 }
 
 figure:hover {
